# leagueStats

./: .gitignore  README.md
.github/workflows/: deploy-pages.yml  scrape-data.yml
apps/web/: angular.json  package-lock.json  package.json  tsconfig.app.json  tsconfig.json
apps/web/public/data/: manifest.json
apps/web/public/data/lan/bronze/: 14d.json  14d.last_success.json  7d.json  current.json  current.last_success.json
apps/web/public/data/lan/d2_plus/: 14d.json  14d.last_success.json  7d.json  7d.last_success.json  current.json  current.last_success.json
apps/web/public/data/lan/diamond_plus/: 14d.json  14d.last_success.json  7d.json  7d.last_success.json  current.json  current.last_success.json
apps/web/public/data/lan/emerald_plus/: 14d.json  14d.last_success.json  7d.json  7d.last_success.json  current.json  current.last_success.json
apps/web/public/data/lan/gold_plus/: 14d.json  14d.last_success.json  7d.json  7d.last_success.json  current.json  (+1 more)
apps/web/src/: index.html  main.ts  styles.css
apps/web/src/app/: app.component.css  app.component.html  app.component.ts  app.config.ts  app.routes.ts
apps/web/src/environments/: environment.ts
docs/: ARCHITECTURE.md  DATA_SCHEMA.md  ROADMAP.md
tools/scraper/: README.md  pyproject.toml  requirements.txt
tools/scraper/src/loltee_scraper/: __init__.py  __main__.py  build_teamplay.py  cli.py  config.py  data_io.py  manifest.py  oracle_teamplay.py  run_matrix.py  scraper.py
tools/scraper/src/loltee_scraper.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
(+140 files in other folders)
