[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "loltee-scraper"
version = "0.1.0"
description = "LoLalytics static data scraper for LolTEEEST"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12.3",
  "playwright>=1.52.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
loltee-scrape = "loltee_scraper.cli:main"
loltee-scrape-matrix = "loltee_scraper.run_matrix:main"
